Correction for menu layout and on hover event modified to accomodate click on mobile.

--- a/website/static/sass/developers.scss
+++ b/website/static/sass/developers.scss
@@ -508,7 +508,7 @@ p {
 
 @media (max-width: 440px) {
   .footer-distributed {
-    padding: 20px 20px;
+    padding: 24px 20px;
   }
 }
 
